[EuiResizableContainer] EuiResizableButton fix z-index

--- a/src/components/resizable_container/_resizable_button.scss
+++ b/src/components/resizable_container/_resizable_button.scss
@@ -3,7 +3,7 @@
 .euiResizableButton {
   position: relative;
   flex-shrink: 0;
-  z-index: $euiZLevel1;
+  z-index: 1;
 
   &:before,
   &:after {
